Realice parte del controller de Branch, y el controller de Club